Mount a gradle cache volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,7 @@ services:
     command: tail -f /dev/null
     volumes:
       - ./qm:/app/qm
+      - gradle-cache:/home/gradle/.gradle
+
+volumes:
+  gradle-cache:
