--- a/Dockerfile.deno
+++ b/Dockerfile.deno
@@ -6,7 +6,7 @@ RUN apk --no-cache add git
 WORKDIR /app
 
 # Clone the matcher
-ENV MATCHER_REPO=${MATCHER_REPO:-https://github.com/ix0rai/matcher.git}
+ENV MATCHER_REPO=${MATCHER_REPO:-https://github.com/QuiltMC/qm-matcher.git}
 ENV MATCHER_GIT_REF=${MATCHER_GIT_REF:-5245765428ad85fd626251de124ad98e3b9856ac}
 RUN git clone ${MATCHER_REPO} . && git reset --hard ${MATCHER_GIT_REF} && git clean -df && \
     git config user.email "me@example.com" && git config user.name "Me"
